style.css
/*=========
  Testing
===========*/
/* * {
  outline: 1px dashed red;
} */

/*=====================================
  Box-sizing | Initial margin padding
=======================================*/
*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*================
  root variables
==================*/
:root {
  --grey-dark: #5e5e5e;
  --grey-light: #e7e6e6;
  --light-black: #393f41;
  --button-blue: #137ec0;
  --border-grey: #d1d7da;
  --background: #f6fcff;
}

/*================
  Document setup
==================*/
html {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  font-weight: 400;
  display: flex;
  flex-direction: column;
}

body {
  flex: auto;
  min-height: 100vh;
  max-width: 1200px;
  background-color: var(--background);
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/*===============
  article title
=================*/
h1 {
  color: var(--light-black);
  font-weight: 700;
  font-size: 2.7rem;
  font-family: 'Heebo', sans-serif;
}

/*==============
  author name
================*/
h2 {
  font-weight: 600;
  font-size: 1.8rem;
}

h2, h4, .click {
  cursor: pointer;
}

/*====
=======*/
h3 {
  font-weight: 400;
  color: var(--button-blue);
}

/*===================
  Element selectors
=====================*/
p {
  font-size: 1.2rem;
  font-family: 'Lora', Georgia, Cambria, "Times New Roman", Times, serif;
  line-height: 2rem;
  color: var(--grey-dark);
}

ul {
  list-style: none;
}

/*================
  Navigation bar
==================*/
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: nowrap;
  gap: 1rem;
  
  font-size: 1rem;
  padding: 2.5rem 4rem;
  border-bottom: 0.1rem solid var(--border-grey);

  position: relative;
  z-index: 2;
}

nav ul {
  display: flex;
  align-items: center;
  justify-content: center;
}

nav .left-items,
nav .right-items {
  display: flex;
}

nav .left-items {
  flex-wrap: nowrap;
}

nav .left-items,
nav .author-info {
  gap: 1.5rem;
}

.left-items ul {
  gap: 0.5rem;
}

.author-info {
  color: var(--grey-dark);
  cursor: pointer;
}

.author-buttons {
  align-self: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*=============
  nav buttons
===============*/
.button {
  color: white;
  background: var(--button-blue);

  border-radius: 5rem;
  border-style: none;
  border: 0.1rem solid var(--button-blue);
  width: 4.8rem;
  height: 2.4rem;
  cursor: pointer;
}

.button.subscribe {
  width: 2.4rem;
  border-radius:50%;
  color: var(--grey-light);
}

.button.get-started {
  width: 5.6rem;

  color: var(--button-blue);
  background: transparent;

  border-style: solid;
  border-color: var(--button-blue);
}

/*===================
  nav : right-items
=====================*/
nav .right-items li {
  margin-right: 1.5rem;
}

.right-items a {
  text-decoration: none;
  font-size: 0.8rem;
  color: var(--button-blue);
  
}

/*================
  Nav: site logo
==================*/
.fa.fa-github {
  font-size: 2.4rem;
  color: var(--light-black);
}

/*==============
  aside hidden
================*/
.box {
  z-index: 1;
  position: absolute;
  background: linear-gradient(var(--background) 90%, transparent);
  height: 23rem;
}

@media (max-width: 1240px) {
  aside, .box {
    visibility: hidden;
  }
  
}

@media (max-width: 861px) {
  nav {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
  
  nav .left-items {
    flex-wrap: wrap;
  }

  nav .right-items {
    align-self: flex-start;
  }
}

@media (max-width: 727px) {
  nav {
    flex-direction: column-reverse;
    padding: 1rem 0 4rem;
    gap: 2rem;
  }

  nav .right-items {
    width: 100%;
  }

  nav .left-items {
    width: 60vw;
    align-self: flex-start;
    padding-left: 2rem;
    padding-right: 2rem;
  }

  nav .right-items {
    padding: 0 0 1rem;
  }

  nav .right-items li:not(:last-child) {
    padding-left: 2rem;
  }

  nav .right-items .nav-logo {
    padding-right: 2rem;
  }

  nav .right-items {
    justify-content: space-between;
    align-content: space-between;
    border-bottom: 0.1rem solid var(--border-grey);
  }

  .article-nav {
    flex-direction: column-reverse;
    gap: 1rem;
  }

  footer {
    flex-direction: column;
  }
}

@media (max-width: 550px) {
  nav {
    padding: 1rem 0 1rem;
  }
}

/*=======
  aside
=========*/
aside, .box {
  display: flex;
  flex-direction: column;
  width: 12rem;
  margin-left: 3rem;
  inset: 5.5rem 0 auto 0;
}

aside {
  z-index: -1;
  position: fixed;
}

aside h4,
aside p,
aside ul {
  margin-bottom: 1rem;
}

.aside-info {
  margin-bottom: 2rem;
}

aside p {
  width: 24ch;
  font-size: 0.9rem;
  line-height: 1.3rem;
}

.aside-buttons {
  display: flex;
}

.aside-buttons .follow,
.notifications li:not(:last-child) {            /* last child | https://stackoverflow.com/a/2573566 */
  margin-right: 0.5rem;
}

.aside-info {
  border-bottom: 0.1rem solid var(--border-grey);
}

.notifications {
  display: flex;
  justify-content: space-between;
}

.notifications i {
  margin-right: 0.3rem;
}

.notifications {
  font-size: 1.2rem;
}

.notifications span {
  color: var(--grey-dark);
}

/*================
  main | article
==================*/
main {
  flex: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  
  margin: 4rem 2rem 2rem;

  position: relative;
  z-index: 1;
}

article {
  width: calc(100vw - 10vw);
  max-width: 42rem;

  display: flex;
  flex-direction: column;
  justify-content: center;
}

.article-nav {
  display: flex;
  justify-content: space-between;
  margin: 1rem 0 2.2rem;
}

article .article-nav-left,
article .article-nav-right,
.bottom-socials {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.article-nav-left .pfp {
  height: 2rem;
  width: 2rem;
  border: 1px solid black;
  border-radius: 50%;
}

.article-nav-left {
  color: var(--grey-dark);
}

.article-nav-right li,
.bottom-socials li {
  cursor: pointer;
  color: white;
  background: black;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.article-nav-right .white-background,
.bottom-socials .white-background {
  color: black;
  background: transparent;
}

.article-image-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.article-image-card img {
  height: auto;
  width: calc(100vw - 10vw);
  max-width: 42rem;
  align-self: center;
}

.article-image-card p {
  font-size: 0.9rem;
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  color: var(--grey-dark);
}

article p {
  margin: 1rem 0;
  color: black;
}

.inline {
  display: inline;
  text-decoration: none;
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
}

.align-middle {
  text-align: center;
  font-weight: 600;
}

/*=============================
  article bottom interactions
===============================*/
.bottom-interactions {
  width: calc(100vw - 10vw);
  max-width: 42rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 3rem;
}

.bottom-interactions .notifications li {
  margin-right: 1rem;
}

/*========
  footer
==========*/
footer {
  padding: 2.6rem 0;
  background: black;
  
  display: flex;
  align-items: center;
  justify-content: space-between;
}

footer .fa.fa-github,
footer ul {
  margin: 1rem 4rem;
  color: white;
  font-weight: 600;
}

footer ul {
  display: flex;
}

footer li {
  margin-right: 0.5rem;
  cursor: pointer;
}

